@@ -383,7 +383,7 @@ CSHARP_METADATA_EXE	= ${CSHARP_OBJ_DIR}/Metadata.exe
 CSHARP_METADATA_SRC	= ${CSHARP_DIR}/Metadata.cs
 CSHARP_OBJ_DIR		= ${SWIG_OBJ_DIR}/csharp
 CSHARP_SEARCH_EXE	= ${CSHARP_OBJ_DIR}/Search.exe
-CSHARP_SEARCH_SRC	= ${CSHARP_DIR}/Search.cs
+CSHARP_SEARCH_SRC	= ${CSHARP_DIR}/Search.cs ${CSHARP_DIR}/Options.cs
 CSHARP_SQL2DMQL_EXE	= ${CSHARP_OBJ_DIR}/Sql2DMQL.exe
 CSHARP_SQL2DMQL_SRC	= ${CSHARP_DIR}/Sql2DMQL.cs ${CSHARP_DIR}/SimpleSqlMetadata.cs
 CSHARP_UNMANAGED_DLL	= ${CSHARP_OBJ_DIR}/librets.so
