@@ -5,7 +5,18 @@ Version 1.2.2 - xx xxx 2008
     transaction hasn't yet completed. Ticket #62.
 
   * Correct regression with logging GetObject calls per Ticket #36.
+    The streaming enhancement caused GetObject calls to always be
+    logged.
     Ticket #63.
+
+  * Enhanced .NET Search to include switch configurable options
+    such that it can be included for debugging purposes on the
+    Windows binary builds. Added RetsSession::GetLibraryVersion()
+    to return a string of the current libRETS version.
+    Ticket #64.
+
+  * Added static GetLibraryVersion to RetsSession.
+    Ticket #65.
 
   * Added API documentation and a new switch to "configure" that
     controls whether user or maintainer documentation is produced.
